# ciro

./: .coderabbit.yaml  .gitignore  .golangci.yaml  CLAUDE.md  Cargo.toml  README.md  clippy.toml  go.mod  go.sum  mise.toml  renovate.json5
.github/workflows/: ci.yaml
cmd/cicada/: main.go  main_test.go
cmd/ciro/: main.go
crates/ciro-cli/: Cargo.toml
crates/ciro-cli/src/: main.rs
crates/ciro-client/: Cargo.toml
crates/ciro-client/src/: lib.rs
crates/ciro-core/: Cargo.toml
crates/ciro-core/src/: lib.rs  pipeline.rs
crates/ciro-llb/: Cargo.toml
crates/ciro-llb/src/: lib.rs
crates/ciro-parser/: Cargo.toml
docs/: schema.md
examples/: fail.kdl  hello.kdl  includes.kdl  jobs.kdl  matrix.kdl  simple.kdl  slow.kdl
examples/fragments/: go-quality.kdl  go-test.kdl  lint.kdl
internal/builder/: builder.go  builder_test.go
internal/cache/: stats.go  stats_test.go
internal/daemon/: daemon.go  daemon_test.go
internal/imagestore/: imagestore.go  imagestore_test.go
internal/progress/: display.go  handler.go  handler_test.go  model.go  model_test.go  plain.go  plain_test.go  quiet.go  tui.go  tui_test.go
internal/runner/: runner.go  runner_test.go
internal/synccontext/: synccontext.go  synccontext_test.go
pkg/parser/: include.go  nodes.go  parser.go  parser_test.go  resolver.go
pkg/pipeline/: clone.go  clone_test.go  expand.go  expand_test.go  filter.go  filter_test.go  merge.go  merge_test.go  params.go  params_test.go  pipeline.go  pipeline_test.go  slicefn.go  slicefn_test.go
pkg/slogctx/: slogctx.go
schemas/: ci.schema.kdl
(+3 files in other folders)
