[workspace]
resolver = "2"
members = ["crates/*"]

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
license = "MIT"
repository = "https://github.com/ndisidore/ciro"

[workspace.dependencies]
# KDL parsing and schema
kdl = "6.5"

# BuildKit integration
buildkit-llb = "0.2"
buildkit-frontend = "0.3"
tonic = "0.14"

# Async runtime
tokio = { version = "1", features = ["full"] }

# CLI
clap = { version = "4", features = ["derive"] }

# Error handling
miette = { version = "7", features = ["fancy"] }
thiserror = "2"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Internal crates
ciro-core = { path = "crates/ciro-core" }
ciro-parser = { path = "crates/ciro-parser" }
ciro-llb = { path = "crates/ciro-llb" }
ciro-client = { path = "crates/ciro-client" }

[workspace.lints.rust]
unsafe_code = "deny"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
unwrap_used = "warn"
expect_used = "warn"
