[package]
name = "ciro-cli"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "ciro"
path = "src/main.rs"

[dependencies]
ciro-parser.workspace = true
clap.workspace = true
miette.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

[lints]
workspace = true
